# BareOS

./: .clangd  .gitignore  CLAUDE.md  Makefile  README.md  compile_flags.txt  kontiki.md  t  架构设计.md
components-ref/actuator/: CMakeLists.txt  README.md  xy_actuator.c  xy_actuator.h
components-ref/charger/: CMakeLists.txt  DEPRECATED.md  README.md
components-ref/charger/inc/: xy_bq25620.h  xy_charger.h
components-ref/charger/src/: xy_bq25620.c
components-ref/crypto/examples/: CMakeLists.txt  example_aes.c  example_base64.c  example_hash.c  example_hex.c  example_hmac.c  example_random.c  example_sm2.c  example_sm3.c  example_sm4.c
components-ref/crypto/xy_sm2/: CMakeLists.txt  xy_sm2.c  xy_sm2.h
components-ref/crypto/xy_sm3/: CMakeLists.txt  xy_sm3.c  xy_sm3.h
components-ref/crypto/xy_sm4/: CMakeLists.txt  xy_sm4.c  xy_sm4.h
components-ref/device/: API.md  CMakeLists.txt  DESIGN_SPEC.md  DEVICE_ARCHITECTURE.md  xy_device.c  xy_device_core.c  xy_device_core.h
components-ref/device/inc/: xy_adc.h  xy_dev_api.h  xy_dev_i2c.h  xy_dev_spi.h  xy_dev_uart.h  xy_device.h  xy_device_async.h  xy_device_error.h  xy_device_pm.h  xy_gpio.h  xy_pwm.h
components-ref/device/src/: xy_device.c  xy_device_async.c  xy_device_pm.c  xy_ws2812.c  xy_ws2812.h
components-ref/device/tests/: CMakeLists.txt  main.c  test_device_async.c  test_device_pm.c
components-ref/dm/: CMakeLists.txt  DM_INTEGRATION_COMPLETE.md  DM_INTEGRATION_PLAN.md  DM_OPTIMIZATION_PLAN.md
components-ref/dm/factory/: README.md  xy_factory.c  xy_factory.h
components-ref/dm/fee/: README.md  fee-4byte.md  fee-test.c  fee-跨区写入.md
components-ref/dm/inc/: xy_fs.h  xy_json.h
components-ref/dm/src/: FS_README.md  JSON_README.md  xy_fs.c  xy_json.c
components-ref/dm/test/: CMakeLists.txt  test_base64.c  test_factory.c  test_nvm.c  test_tlv.c
components-ref/dm/xy_norflash/: xy_nor_port.c
components-ref/dm/xy_nvm/: NVM_OPTIMIZATION.md
components-ref/drivers/: CMakeLists.txt  DRIVERS_PLAN.md  drivers.md
components-ref/drivers/display/: CMakeLists.txt  Kconfig  README.md  xy_rgb_drv.h
components-ref/drivers/inc/: xy_device.h
components-ref/drivers/power/: CMakeLists.txt
components-ref/drivers/sensor/: CMakeLists.txt  xy_dht11.c  xy_dht11.h
components-ref/drivers/storage/: CMakeLists.txt  xy_w25qxx.c  xy_w25qxx.h
components-ref/drivers/system/: CMakeLists.txt
components-ref/drivers/wireless/: CMakeLists.txt
components-ref/drivers/xy_sys/: xy_typedef.h
components-ref/fota/: AES支持不定长数据加密.md  Bootloader上位机软件安全防护建议.md  CMakeLists.txt  CSPRNG、软件RNG、硬件RNG区别解析.md  ChaCha20与AES性能及安全性对比.md  Cortex M0与沁恒RISC-V原子操作对比.md  SECURE_FOTA.md  WireGuard与MCUboot加密方式对比.md  WireGuard与传统VPN在工业控制中的优劣势对比.md  WireGuard加密方式详解.md  xy_fota.c  xy_fota.h  上位机通讯加密密钥管理方案.md  单片机Bootloader与APP共用加密方案.md  单片机HMAC-SHA256资源占用分析.md  嵌入式固件安全升级与防克隆方案.md  轻量级非对称算法选择与推荐.md
components-ref/fota/inc/: xy_fota_flash.h  xy_fota_secure.h
components-ref/fota/src/: xy_fota_bank.c  xy_fota_flash.c  xy_fota_secure.c
components-ref/gui/: CMakeLists.txt  Kconfig  README.md  xy_gui.c  xy_gui.h
components-ref/gui/docs/: Charlie.md  led strip effects-multi-protocols.md  led strip effects.md  sceen_effects-1or32bit.md  screen_effects-1to32bit.md
components-ref/gui/effects/: CMakeLists.txt  xy_gui_effect_blink.c  xy_gui_effect_blink.h  xy_gui_effect_breath.c  xy_gui_effect_breath.h  xy_gui_effect_fade.c  xy_gui_effect_fade.h  xy_gui_effect_rotate.c  xy_gui_effect_rotate.h  xy_gui_effect_slide.c  xy_gui_effect_slide.h  xy_gui_effects.h  xy_gui_screen_fx.h  xy_led_screen.h  xy_rgb_fx_3d.c  xy_rgb_fx_extended.c  xy_rgb_fx_matrix.c  xy_rgb_fx_music.c
components-ref/gui/fonts/: CMakeLists.txt  README.md  font_data_8x16.inc  xy_font_16x24.c  xy_font_16x24.h  xy_font_8x16.c  xy_font_8x16.h  xy_font_chinese_16x16.c  xy_font_chinese_16x16.h  xy_led_screen_font.h
components-ref/gui/inc/: xy_font.h  xy_gui_button.h  xy_gui_checkbox.h  xy_gui_container.h  xy_gui_display.h  xy_gui_draw.h  xy_gui_dropdown.h  xy_gui_event.h  xy_gui_label.h  xy_gui_layout.h  xy_gui_list.h  xy_gui_progress.h  xy_gui_slider.h  xy_gui_tab.h  xy_gui_textbox.h  xy_gui_theme.h  xy_gui_widget.h
components-ref/gui/src/: xy_font.c  xy_gui_button.c  xy_gui_checkbox.c  xy_gui_container.c  xy_gui_draw.c  xy_gui_dropdown.c  xy_gui_event.c  xy_gui_label.c  xy_gui_layout.c  xy_gui_list.c  xy_gui_progress.c  xy_gui_slider.c  xy_gui_tab.c  xy_gui_textbox.c  xy_gui_theme.c  xy_gui_widget.c
components-ref/hal/: CMakeLists.txt  HAL_UNIFIED_API_SPEC.md  README.md  VALIDATION_STRATEGY.md  hal_status.md  test_hal_syntax.sh
components-ref/hal/PC/: CMakeLists.txt  xy_hal_gpio_pc.c  xy_hal_i2c_pc.c  xy_hal_pc.c  xy_hal_pc.h  xy_hal_pc_impl.c  xy_hal_pin_pc.c  xy_hal_spi_pc.c  xy_hal_uart_pc.c  xy_log_pc.c
components-ref/hal/inc/: xy_hal.h  xy_hal_adc.h  xy_hal_can.h  xy_hal_dac.h  xy_hal_dma.h  xy_hal_error.h  xy_hal_exti.h  xy_hal_flash.h  xy_hal_gpio.h  xy_hal_gpio_dev.h  xy_hal_gpio_types.h  xy_hal_i2c.h  xy_hal_i2c_dev.h  xy_hal_i2c_types.h  xy_hal_i2s.h  xy_hal_ir.h  xy_hal_lp_timer.h  xy_hal_pin.h  xy_hal_pwm.h  xy_hal_rng.h  xy_hal_rtc.h  xy_hal_spi.h  xy_hal_spi_dev.h  xy_hal_spi_types.h  xy_hal_sys.h  xy_hal_tgpio.h  xy_hal_timer.h  xy_hal_uart.h  xy_hal_uart_dev.h  xy_hal_uart_types.h  xy_hal_wdg.h  xy_log.h
components-ref/kernel/: CMakeLists.txt  Kconfig  README.md
components-ref/net/: CMakeLists.txt  LWIP VPNWireGuard 实现可行性分析与方案.md  LWIP 小白分步式详解指导文档.md  README.md
components-ref/sensor/: CMakeLists.txt  DRIVER_MIGRATION_GUIDE.md  Kconfig  LOW_POWER_SENSORS.md  ReadMe.md  SENSOR_GUIDE.md  SENSOR_OPTIMIZATION_PLAN.md  drivers.md  sensor.md  sensor_address.md  sensor_adt7420.c  sensor_adt7420.h  sensor_apds9960.h  sensor_calibration.c  sensor_config.h  sensor_core.c  sensor_core.h  sensor_dma.c  sensor_fifo.c  sensor_filter.c  sensor_fusion.c  sensor_imu_power.c  sensor_imu_power.h  sensor_interrupt.c  sensor_mem_pool.c  sensor_moton.c  sensor_power.c  sensor_self_test.c  sensor_threshold.c  sensor_type.h
project/Tiny-App/: CMakeLists.txt
project/plb/: CMakeLists.txt
(+896 files in other folders)
